autotests/syntax-tests/tests/negative/negative66.sref
Name { Name $ESWAP Name Name = : = ; = ; } ; 